[gd_scene load_steps=8 format=2]

[ext_resource path="res://node/vehicle/isuzu_elf/src/vox_isuzu_elf.glb" type="PackedScene" id=1]
[ext_resource path="res://node/vehicle/isuzu_elf/vehicle_isuzu_elf.gd" type="Script" id=6]
[ext_resource path="res://node/vehicle/isuzu_elf/seat_1.gd" type="Script" id=7]
[ext_resource path="res://node/vehicle/isuzu_elf/seat_2.gd" type="Script" id=8]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 2, 1.5, 7 )

[sub_resource type="BoxShape" id=2]
extents = Vector3( 1, 2, 2 )

[sub_resource type="BoxShape" id=3]
extents = Vector3( 1, 2, 2 )

[node name="vox_isuzu_elf" type="VehicleBody"]
collision_layer = 1088
mass = 80.0
script = ExtResource( 6 )
MAX_ENGINE_FORCE_D = 200.0
MAX_ENGINE_FORCE_B = -100.0
STEERING_RANGE = 0.5
MAX_BREAK = 50.0

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.5, 0 )
shape = SubResource( 1 )

[node name="vox" parent="." instance=ExtResource( 1 )]

[node name="wheel_fr_l" type="VehicleWheel" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.2, 1, 4.1 )
use_as_traction = true
use_as_steering = true
wheel_radius = 1.2
suspension_stiffness = 50.0

[node name="mesh_fr_l" type="MeshInstance" parent="wheel_fr_l"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.2, -1, -4.1 )

[node name="wheel_fr_r" type="VehicleWheel" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.2, 1, 4.1 )
use_as_traction = true
use_as_steering = true
wheel_radius = 1.2
suspension_stiffness = 50.0

[node name="mesh_fr_r" type="MeshInstance" parent="wheel_fr_r"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.2, -1, -4.1 )

[node name="wheel_re_l" type="VehicleWheel" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 1, -4.7 )
use_as_traction = true
wheel_radius = 1.2
suspension_stiffness = 50.0

[node name="mesh_re_l" type="MeshInstance" parent="wheel_re_l"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3, -1, 4.7 )

[node name="wheel_re_r" type="VehicleWheel" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 1, -4.7 )
use_as_traction = true
wheel_radius = 1.2
suspension_stiffness = 50.0

[node name="mesh_re_r" type="MeshInstance" parent="wheel_re_r"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3, -1, 4.7 )

[node name="ride_pos_seat_1" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.3, 2, 4.5 )

[node name="ride_pos_seat_2" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.3, 2, 4.5 )

[node name="seat_1" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 2, 4 )
collision_layer = 262144
collision_mask = 0
script = ExtResource( 7 )

[node name="col_seat_1" type="CollisionShape" parent="seat_1"]
shape = SubResource( 2 )

[node name="seat_2" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 2, 4 )
collision_layer = 262144
collision_mask = 0
script = ExtResource( 8 )

[node name="col_seat_2" type="CollisionShape" parent="seat_2"]
shape = SubResource( 3 )

[node name="headlight_l" type="SpotLight" parent="."]
transform = Transform( 1, 0, 0, 0, -0.984808, 0.173648, 0, -0.173648, -0.984808, -2.4, 2, 7.2 )
visible = false
light_energy = 2.0
shadow_enabled = true
spot_range = 30.0
spot_angle = 15.0

[node name="headlight_r" type="SpotLight" parent="."]
transform = Transform( 1, 0, 0, 0, -0.984808, 0.173648, 0, -0.173648, -0.984808, 2.4, 2, 7.2 )
visible = false
light_energy = 2.0
shadow_enabled = true
spot_range = 30.0
spot_angle = 15.0

[node name="roomlight" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 6, 5 )
visible = false
omni_range = 3.0

[node name="interact_info" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="interact_info"]
margin_left = 16.0
margin_top = 464.0
margin_right = 944.0
margin_bottom = 496.0
text = "ISUZU ELF
interact"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
